--- a/juniperSoftwareUpgrade/ansible.cfg
+++ b/juniperSoftwareUpgrade/ansible.cfg
@@ -12,13 +12,13 @@
 
 # some basic default values...
 
-inventory      = /home/ansible/Automation/Ansible/jsnapy_module_tests/inventory/hosts
-library        = /usr/share/my_modules/
-module_utils   = /usr/share/my_module_utils/
-remote_tmp     = ~/.ansible/tmp
-local_tmp      = ~/.ansible/tmp
-forks          = 5
-poll_interval  = 15
+#inventory      = /home/ansible/Automation/Ansible/jsnapy_module_tests/inventory/hosts
+#library        = /usr/share/my_modules/
+#module_utils   = /usr/share/my_module_utils/
+#remote_tmp     = ~/.ansible/tmp
+#local_tmp      = ~/.ansible/tmp
+#forks          = 5
+#poll_interval  = 15
 #sudo_user      = root
 #ask_sudo_pass = True
 #ask_pass      = True
@@ -58,13 +58,13 @@ poll_interval  = 15
 # additional paths to search for roles in, colon separated
 #roles_path    = /etc/ansible/roles
 #roles_path     = /home/jesh/.ansible/roles/Juniper.junos:/home/ansible/.ansible/roles/Juniper.junos
-roles_path = /home/ansible/Automation/Ansible/jsnapy_module_tests/roles
+#roles_path = /home/ansible/Automation/Ansible/jsnapy_module_tests/roles
 
 
 # uncomment this to disable SSH key host checking
-host_key_checking = False
-ansible_port=830
-private_key_file=/home/jesh/.ssh/id_rsa_dc
+#host_key_checking = False
+#ansible_port=830
+#private_key_file=/home/jesh/.ssh/id_rsa_dc
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 stdout_callback = skippy
 
@@ -190,7 +190,7 @@ callback_whitelist = jsnapyfull
 #cache_plugins      = /usr/share/ansible/plugins/cache
 #callback_plugins   = /usr/share/ansible/plugins/callback
 #callback_plugins =  /home/ansible/Automation/Ansible/jsnapy_module_tests/roles/Juniper.junos/callback_plugins/
-callback_plugins = /home/ansible/Automation/Ansible/jsnapy_module_tests/callback_plugins
+#callback_plugins = /home/ansible/Automation/Ansible/jsnapy_module_tests/callback_plugins
 #callback_plugins = /home/jesh/.ansible/roles/Juniper.junos:/home/ansible/.ansible/roles/Juniper.junos/callback_plugins/
 #connection_plugins = /usr/share/ansible/plugins/connection
 #lookup_plugins     = /usr/share/ansible/plugins/lookup
